Corrected spacing on posts

--- a/css/main.scss
+++ b/css/main.scss
@@ -175,7 +175,8 @@ $footer-height: 35px;
 
 .post {
     min-height: 150px;
-    margin-bottom: 10px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
     border-bottom: 1px solid $subtle;
 }
 
